--- a/phpdocker/nginx/nginx.conf
+++ b/phpdocker/nginx/nginx.conf
@@ -6,20 +6,20 @@ server {
     access_log /var/log/nginx/application.access.log;
 
     root /app/public;
-    index index.blade.php;
+    index admin.blade.php;
 
-    # try to serve file directly, fallback to index.blade.php
+    # try to serve file directly, fallback to admin.blade.php
     location / {
-        try_files $uri /index.blade.php$is_args$args;
+        try_files $uri /admin.blade.php$is_args$args;
     }
 
     if (!-e $request_filename) {
-        rewrite ^.*$ /index.blade.php last;
+        rewrite ^.*$ /admin.blade.php last;
     }
 
     location ~ \.php$ {
         fastcgi_pass php-fpm:9000;
-        fastcgi_index index.blade.php;
+        fastcgi_index admin.blade.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PHP_VALUE "error_log=/var/log/nginx/application_php_errors.log";
         fastcgi_buffers 16 16k;
