--- a/phpdocker/nginx/nginx.conf
+++ b/phpdocker/nginx/nginx.conf
@@ -8,7 +8,7 @@ server {
     root /app/public;
     index index.php;
 
-    # try to serve file directly, fallback to index.blade.php
+    # try to serve file directly, fallback to main.blade.php
     location / {
         try_files $uri /index.php$is_args$args;
     }
