--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@
 ###############################################################################
 version: '3.1'
 services:
-    mailhog:
-        image: 'mailhog/mailhog:latest'
-        ports:
-            - '5556:8025'
+#    mailhog:
+#        image: 'mailhog/mailhog:latest'
+#        ports:
+#            - '5556:8025'
 
-    redis:
-        image: 'redis:alpine'
+#    redis:
+#        image: 'redis:alpine'
 
     mysql:
         image: 'mysql:8.0'
