--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,11 @@ services:
         volumes:
             - '.:/app'
             - './phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf'
+            - './phpdocker/nginx/certs/localhost.crt:/etc/nginx/localhost.crt'
+            - './phpdocker/nginx/certs/localhost.key:/etc/nginx/localhost.key'
         ports:
-            - '5555:80'
+            - '80:80'
+            - '443:443'
 
     php-fpm:
         build: phpdocker/php-fpm
