--- a/phpdocker/nginx/nginx.conf
+++ b/phpdocker/nginx/nginx.conf
@@ -1,9 +1,25 @@
 server {
     listen 80 default;
-
-    client_max_body_size 108M;
+    server_name localhost;
 
     access_log /var/log/nginx/application.access.log;
+    # error_log /var/log/nginx/application.error.log debug;
+
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name localhost;
+
+    ssl_certificate /etc/nginx/localhost.crt;
+    ssl_certificate_key /etc/nginx/localhost.key;
+    # ssl_protocols TLSv1.2 TLSv1.3;
+    # ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
+
+    client_max_body_size 108M;
+    access_log /var/log/nginx/application.access.log;
+    # error_log /var/log/nginx/application.error.log debug;
 
     root /app/public;
     index index.php;
